--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "format:prettier": "npm run lint:prettier -- --write",
     "prepare": "husky install"
   },
-  "dependencies": {},
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "@types/intl-tel-input": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
     "@vitebook/client": "^0.100.5",
@@ -32,6 +32,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-svelte3": "^3.0.0",
     "husky": "^7.0.0",
+    "intl-tel-input": "^17.0.18",
     "lint-staged": "^11.0.0",
     "npm-run-all": "^4.0.0",
     "postcss": "^8.0.0",
