--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "strictNullChecks": true,
     "target": "esnext",
     "useDefineForClassFields": false,
-    "types": ["src/global.d.ts", "node", "vite/client"],
+    "types": ["node", "vite/client"],
     "jsx": "preserve"
   },
   "include": ["transformDeps.ts", "src"]
