--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "intl-tel-input-svelte",
   "description": "",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "transform-deps": "ts-node-esm transformDeps.ts",
     "vitebook:dev": "vitebook dev",
     "vitebook:build": "vitebook build",
     "vitebook:preview": "vitebook preview",
@@ -13,11 +14,15 @@
     "format:eslint": "npm run lint:eslint -- --fix",
     "lint:prettier": "prettier . --check --ignore-path .gitignore --loglevel warn",
     "format:prettier": "npm run lint:prettier -- --write",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "pnpm transform-deps"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "@types/babel__core": "^7.1.19",
     "@types/intl-tel-input": "^17.0.5",
+    "@types/node": "^18.7.2",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
     "@vitebook/client": "^0.100.5",
@@ -25,10 +30,12 @@
     "@vitebook/markdown-svelte": "^0.100.5",
     "@vitebook/theme-default": "^0.100.5",
     "autoprefixer": "^10.0.0",
+    "babel-plugin-transform-commonjs": "^1.1.6",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-svelte3": "^3.0.0",
     "husky": "^7.0.0",
@@ -37,8 +44,10 @@
     "npm-run-all": "^4.0.0",
     "postcss": "^8.0.0",
     "prettier": "^2.0.0",
+    "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.49.0",
     "tailwindcss": "^3.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.4.0",
     "vite": "^3.0.0"
   },
