--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,10 @@
     "declaration": true,
     "declarationMap": true,
     "esModuleInterop": true,
+    "allowUmdGlobalAccess": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "moduleResolution": "node",
     "newLine": "lf",
@@ -30,13 +27,8 @@
     "strictNullChecks": true,
     "target": "esnext",
     "useDefineForClassFields": false,
-    "types": [
-      "node",
-      "vite/client"
-    ],
+    "types": ["src/global.d.ts", "node", "vite/client"],
     "jsx": "preserve"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["transformDeps.ts", "src"]
 }
